--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ html {
 
 body {
     margin: 0;
+
 }
 
 article,
@@ -359,7 +360,7 @@ html {
 }
 
 body {
-    background: #fff; /* Fallback for when there is no custom background color defined. */
+    background: #fafafa; /* Fallback for when there is no custom background color defined. */
 }
 
 blockquote:before,
@@ -651,7 +652,7 @@ a:active {
 }
 
 .screen-reader-text:focus {
-    background-color: #f1f1f1;
+    background-color: #cacaca;
     border-radius: 3px;
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
     clip: auto !important;
@@ -3475,7 +3476,7 @@ h2 {
     line-height: 18px !important;
 }
 .holder {
-    margin: 0 auto;
+/*    margin: 0 auto; */
     max-width: 1170px;
 }
 .clear {
@@ -3563,8 +3564,8 @@ h2 {
     display: inline-block;
     width: 200px;
     vertical-align: middle;
-    padding: 10px 0 0;
-    margin: 0 0 0 10px
+    padding: 0px 0 0;
+    margin: 0 0 0 0px
 }
 .site-header .head-wrap .home-logo a {
     display: block;
@@ -3634,6 +3635,7 @@ h2 {
 #content {
     font: 400 16px Lato;
     color: #444;
+    background: #eee;
 }
 #content h2 {
     font-size:24px;
@@ -4252,7 +4254,7 @@ h2 {
     font-size: 20px;
     font-weight: 400;
     position: relative;
-    background: #fafafa;
+    background: #eee;
     overflow: hidden;
 }
 .footer-section .map {
